crates/rimz/src/sidebar_pane/render/snapshots/rimz__sidebar_pane__render__tests__provider_lapsed.snap
---
source: crates/rimz/src/sidebar_pane/render/tests/mod.rs
expression: screen
---
────────────────────────────────────────────────────────────────────────────────────────────────────
Claude Code v2.1.158                                                                            ⇅ rc

 ▐▛███▜▌  ◎ 12  ◇ 498k ↘ 434k ↗ 64k ◌ 68k                                                      $3.50
▝▜█████▛▘ plan lapsed · no Claude Code access · since <first seen>
  ▘▘ ▝▝
