crates/rimz/src/sidebar_pane/render/snapshots/rimz__sidebar_pane__render__tests__scroll_manual_offset_holds.snap
---
source: crates/rimz/src/sidebar_pane/render/tests/mod.rs
expression: screen
---
 ⌘ query-engine

 ◎ 0                  ◇ 0 ↘ 0 ↗ 0 ◌ 0
 ¤ 6                            $0.00
 ────────────────────────────────────
 ? 0   ! 0   ⏸︎ 0   ✓ 0   ⢿ 6   ☾ 0

▎⣾ codex                             🮇
▎  task-1                            🮇
▎  ▢ ──────────────────────────    0%🮇
▎  ▤ 0                               🮇
▎⣾ codex                             🮇
▎  task-2                            🮇
▎  ▢ ──────────────────────────    0%🮇
▎  ▤ 0                               🮇

 ⑂ beta
 ⣾ codex
   task-3
   ▢ ──────────────────────────    0%
   ▤ 0
 ⣾ codex
   task-4
   ▢ ──────────────────────────    0%
   ▤ 0
 ⣾ codex
   task-5
   ▢ ──────────────────────────    0%
   ▤ 0
 ────────────────────────────────────
  W: ◎ 0  ◇ 0 ↘ 0 ↗ 0 ◌ 0       $0.00
  M: ◎ 0  ◇ 0 ↘ 0 ↗ 0 ◌ 0       $0.00

                           ? for help
