crates/rimz/src/sidebar_pane/render/snapshots/rimz__sidebar_pane__render__tests__scroll_pins_tall_expanded_card_top.snap
---
source: crates/rimz/src/sidebar_pane/render/tests/mod.rs
expression: screen
---
 ⌘ query-engine

 ◎ 0                                  ◇ 0 ↘ 0 ↗ 0 ◌ 0
 ¤ 1                                            $0.00
 ────────────────────────────────────────────────────
 ? 0   ! 0   ⏸︎ 0   ✓ 0                ⢿ 1   ☾ 0   ○ 0

▎⑂ main ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄🮇
▌⢄ claude                                            ▐
▌  db migrate                                        ▐
▌  ▢ ──────────────────────────────────────────    0%▐
▌  ▤ 0                                               ▐
▌  ⧉ subagents (4)                                   ▐
▌    ⣾ Explore · survey area 0                       ▐
▌      ▤ 1k                                        4m▐
▌    ⣾ Explore · survey area 1                       ▐
▌      ▤ 2k                                        3m▐
▌    ⣾ Explore · survey area 2                       ▐
▌      ▤ 3k                                        3m▐
 ────────────────────────────────────────────────────
  W: ◎ 0  ◇ 0 ↘ 0 ↗ 0 ◌ 0                       $0.00
  M: ◎ 0  ◇ 0 ↘ 0 ↗ 0 ◌ 0                       $0.00

                                           ? for help
